# Ray-Tune-XGBoost

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: test_deploy.yaml
eval/: .gitignore
notebooks/: xgboost-hyperparameter-tuning-with-ray-tune.ipynb
src/: prepare.py  preprocess.py  tune.py  utils.py
tests/: test_prepare.py  test_preprocess.py  test_utils.py
