[tool.poetry]
name = "Ray-Tune-XGBoost"
version = "0.1.0"
description = "Hyper-parameter optimization of a XGBoost Model with Ray Tune"
authors = ["Moritz Mistol <moritz.mistol@gmail.com>"]
readme = "README.md"
documentation = "https://MoritzM00.github.io/Ray-Tune-XGBoost"
repository = "https://github.com/MoritzM00/Ray-Tune-XGBoost"
license = "MIT"
keywords = ["Python", "Poetry"]

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["tune"], version = "^2.3.0"}
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
xgboost = "^1.7.4"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
dvc = "^2.51.0"
optuna = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pre-commit = ">=3.1.1"
pdoc3 = ">=0.10.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
